<resources>
    <string name="app_name">Minha Script</string>
    <string name="app_title">برنامج إدارة المواعيد</string>
    <string name="empty_state">لا توجد بيانات حتى الآن. اضغط + لإضافة عضو.</string>
    <string name="add_member_title">إضافة عضو</string>
    <string name="add_member_action">إضافة</string>
    <string name="cancel_action">إلغاء</string>
    <string name="delete_member">حذف</string>
    <string name="label_nin">رقم التعريف الوطني (NIN)</string>
    <string name="label_wassit">رقم وسيط</string>
    <string name="label_ccp">رقم CCP</string>
    <string name="label_phone">رقم الهاتف</string>
    <string name="add_member_validation">يرجى إدخال NIN ورقم وسيط وCCP.</string>
</resources>
